--- a/public/css/catalog.css
+++ b/public/css/catalog.css
@@ -3,7 +3,7 @@
 }
 
 .catalog-sort-inner {
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -32,7 +32,7 @@
 }
 
 .catalog-sort-select::before {
-  content: "";
+  content: '';
   position: absolute;
   top: 40%;
   right: 16px;
@@ -137,14 +137,14 @@
 
 .catalog-filter-title {
   display: inline-block;
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
   font-weight: bold;
   font-size: 20px;
   margin-bottom: 10px;
 }
 
 .catalog-filter-item-info {
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
   font-size: 15px;
   margin-left: 6px;
 }
@@ -166,7 +166,7 @@
 }
 
 .catalog-filter-item-fake-checkbox::after {
-  content: "";
+  content: '';
   position: absolute;
   height: 6px;
   width: 12px;
@@ -191,7 +191,7 @@
 .catalog-filter-price-item-input {
   height: 40px;
   width: 80px;
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
   border: 2px solid #d9d9d9;
   border-radius: 4px;
   background-color: #fff;
@@ -206,6 +206,7 @@
   padding: 16px;
   width: 327px;
   height: fit-content;
+  background-color: #fff;
 }
 
 .catalog-filter-inputs {
@@ -219,9 +220,9 @@
 }
 
 .catalog-filter-input::before {
-  content: "$";
+  content: '$';
   position: absolute;
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
   top: 30%;
   left: 10px;
 }
@@ -239,7 +240,7 @@
   color: #fff;
   border: 1px solid transparent;
   border-radius: 60px;
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
   cursor: pointer;
 }
 
@@ -281,7 +282,7 @@
 
 .card-list-item-top-category {
   color: #fff;
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
   background-color: #3d923a;
   padding: 10px 15px;
   display: inline-block;
@@ -316,7 +317,7 @@
 
 .card-list-item-bot-row-title {
   color: #fff;
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
   font-size: 16px;
 }
 
@@ -333,7 +334,7 @@
 
 .card-list-item-bot-label {
   color: #fff;
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
   font-size: 14px;
   margin-top: 14px;
 }
@@ -342,12 +343,12 @@
   font-size: 20px;
   font-weight: bold;
   color: #fff;
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
 }
 
 .card-list-item-bot-link {
   color: #fff;
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
   display: flex;
   align-items: center;
 }
@@ -376,7 +377,7 @@
 }
 
 .catalog-pagination-prev::before {
-  content: "";
+  content: '';
   position: absolute;
   height: 10px;
   width: 10px;
@@ -399,7 +400,7 @@
 }
 
 .catalog-pagination-next::before {
-  content: "";
+  content: '';
   position: absolute;
   height: 10px;
   width: 10px;
@@ -414,7 +415,7 @@
   height: 40px;
   width: 40px;
   color: black;
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -437,171 +438,56 @@
   pointer-events: none;
 }
 
-/* mobile form */
-
-.catalog-form-mobile {
-  z-index: 1;
-  background-color: #fff;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  width: 300px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  transform: translateX(-100%);
-  transition: 0.35s;
-}
-
-.catalog-form-mobile.show {
-  transform: translateX(0);
-}
-
-.catalog-form-mobile-header,
-.catalog-form-mobile-filter-list-header {
-  border-bottom: 1px solid #ccc;
-}
-
-.catalog-form-mobile-filters {
-  display: flex;
-  flex-direction: column;
-  /* align-items: start; */
-  justify-content: start;
-  height: 100%;
-}
-
-.catalog-form-mobile-header-back,
-.catalog-form-mobile-filter-list-header-back {
-  position: relative;
-  height: 50px;
-  width: 150px;
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-  font-size: 20px;
-  border: none;
-  outline: none;
-  background-color: #fff;
-}
-
-.catalog-form-mobile-header-back::before,
-.catalog-form-mobile-filter-list-header-back::before {
-  content: "";
-  display: inline-block;
-  height: 10px;
-  width: 10px;
-  border-left: 2px solid black;
-  border-bottom: 2px solid black;
-  transform: rotate(45deg);
-  position: absolute;
-  left: 20px;
-  top: 35%;
-}
-
-.catalog-form-mobile-backround {
-  position: absolute;
+.catalog-form-bg {
+  position: fixed;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
-  background-color: rgba(0, 0, 0, 0.46);
+  background-color: rgba(0, 0, 0, 0.7);
   z-index: 1;
   display: none;
 }
 
-.catalog-form-mobile-backround.show {
-  display: block;
-}
-
-.catalog-form-mobile-filter {
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-  display: flex;
+.catalog-form-mob-title {
+  display: none;
+  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+  padding-bottom: 10px;
+  border-bottom: 2px solid #d9d9d9;
+  margin-bottom: 10px;
+  font-size: 26px;
+  font-weight: bold;
+  /* display: flex; */
   align-items: center;
   justify-content: space-between;
-  position: relative;
-  border-bottom: 1px solid #ccc;
-  padding: 16px 0;
 }
 
-.catalog-form-mobile-filter-name {
-  padding-left: 10px;
-}
-
-.catalog-form-mobile-filter-selected {
-  padding-right: 30px;
-}
-
-.catalog-form-mobile-filter::after {
-  content: "";
+.catalog-form-mob-title-cross {
   display: inline-block;
-  height: 8px;
-  width: 8px;
-  border-bottom: 2px solid #405ff2;
-  border-right: 2px solid #405ff2;
+  height: 40px;
+  width: 40px;
+  position: relative;
+  outline: none;
+  border: none;
+  background-color: transparent;
+}
+
+.catalog-form-mob-title-cross span {
+  position: absolute;
+  display: inline-block;
+  height: 2px;
+  width: 40px;
+  background-color: #000;
+  top: 18px;
+  left: 0;
+}
+
+.catalog-form-mob-title-cross span:nth-child(1) {
+  transform: rotate(45deg);
+}
+
+.catalog-form-mob-title-cross span:nth-child(2) {
   transform: rotate(-45deg);
-  position: absolute;
-  right: 10px;
-}
-
-.catalog-form-mobile-filter-list {
-  position: absolute;
-  height: 100%;
-  background-color: #fff;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  transform: translateX(-100%);
-  transition: 0.35s;
-}
-
-.catalog-form-mobile-filter-list.show {
-  transform: translateX(0);
-}
-
-.catalog-form-mobile-footer,
-.catalog-form-mobile-filter-list-footer {
-  border-top: 1px solid #ccc;
-  padding: 20px 0;
-  text-align: center;
-}
-
-.catalog-form-mobile-footer-back {
-  padding: 10px 50px;
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-  border-radius: 12px;
-  background-color: rgba(64, 95, 242, 0.2);
-  color: #405ff2;
-  border-color: transparent;
-}
-
-.catalog-form-mobile-filter-list-content {
-  height: 100%;
-  padding-left: 10px;
-}
-
-.catalog-form-mobile-filter-list-footer-back {
-  padding: 10px 40px;
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-  border-radius: 12px;
-  background-color: rgba(64, 95, 242, 0.2);
-  color: #405ff2;
-  border-color: transparent;
-}
-
-.catalog-form-mobile-filter-list-footer-show {
-  padding: 10px 40px;
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-  border-radius: 12px;
-  background-color: #405ff2;
-  color: #fff;
-  border-color: transparent;
-}
-
-.ellipsis {
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  max-width: 120px;
 }
 
 /* media queries */
@@ -630,12 +516,43 @@
     width: 272px;
   }
   .catalog-form {
-    display: none;
+    position: fixed;
+    z-index: 1003;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    height: calc(100vh - 32px);
+    border-radius: 0;
+    transform: translateX(-100%);
+    transition: 0.35s;
+  }
+
+  .catalog-form-bg.show {
+    display: block;
+  }
+
+  .catalog-form.show {
+    transform: translateX(0);
+  }
+  .catalog-filters {
+    max-height: calc(100vh - 150px);
+    overflow: auto;
   }
   .catalog-sort-results {
     display: none;
   }
   .catalog-sort-filter {
+    display: flex;
+  }
+  .catalog-filter-submit-inner {
+    border-top: 2px solid #d9d9d9;
+    margin-top: 0;
+    padding-top: 10px;
+  }
+  .catalog-filter:last-child {
+    margin-bottom: 30px;
+  }
+  .catalog-form-mob-title {
     display: flex;
   }
 }
